# zellij-fingers

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
src/: action.rs  ansi.rs  config.rs  hinter.rs  huffman.rs  main.rs  match_formatter.rs  pane_capture.rs  priority_queue.rs  renderer.rs  state.rs
